[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Obstacle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scripts/Levels/Tutorial/2 - Rotations & Obstacles.gd" type="Script" id=16]

[node name="2 - Rotations & Obstacles" type="Node2D"]
script = ExtResource( 16 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="Grid" parent="." instance=ExtResource( 12 )]

[node name="Robot" parent="Grid" instance=ExtResource( 1 )]

[node name="Obstacle" parent="Grid" instance=ExtResource( 5 )]

[node name="Obstacle2" parent="Grid" instance=ExtResource( 5 )]

[node name="Button" parent="Grid" instance=ExtResource( 2 )]

[node name="Door" parent="Grid" instance=ExtResource( 7 )]

[node name="Level Control" parent="." instance=ExtResource( 14 )]

[node name="IDE" parent="." instance=ExtResource( 15 )]

[node name="Counter" parent="IDE/Main" index="4"]
maxBlocks = 5

[node name="CodeBlockBar" parent="." instance=ExtResource( 11 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 10 )]

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 13 )]

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 8 )]

[node name="AcceptDialog" parent="." instance=ExtResource( 9 )]

[node name="TextBox" parent="." instance=ExtResource( 3 )]

[connection signal="interact" from="Grid/Robot" to="Grid/Button" method="_on_Robot_interact"]
[connection signal="buttonPressed" from="Grid/Button" to="." method="_on_Button_buttonPressed"]

[editable path="IDE"]
[editable path="IDE/Main"]
